erDiagram
    Warehouse ||--|{ Location : "ロケーション 5 階層"
    Location ||--o{ Stock : "棚位×製品×ロットで保管"
    Stock ||--o{ StockTransaction : "全変動の不変ログ"
    InboundOrder ||--|{ InboundOrderDetail : "明細"
    InboundOrder ||--o{ InboundReceipt : "実績"
    InboundReceipt ||--|{ InboundReceiptDetail : "明細"
    OutboundOrder ||--|{ OutboundOrderDetail : "明細"
    OutboundOrder ||--o{ ShippingPackage : "梱包"
    OutboundOrder ||--o{ CarrierShipment : "出荷便"
    Stock ||--o{ StockTake : "棚卸対象"
    StockTake ||--|{ StockTakeDetail : "実数"
    KitMaster ||--|{ KitMasterComponent : "BOM"
    KitMaster ||--o{ KitOrder : "組立指示"
    Pallet }o--o{ Stock : "パレット単位管理"
    Stock ||--o{ ReplenishOrder : "補充トリガ"
    Stock ||--o{ RmaDetail : "返品"
    WmsTxnType ||--o{ StockTransaction : "区分マスタ"
    WmsSequence }o--|| Stock : "採番"
